# pychebfun

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  BattlesTrefethen.ipynb  INSTALL  INSTALL.md  INSTALL.rst  LICENSE.md  Makefile  README  README.md  README.rst  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.github/actions/setup-python-env/: action.yml
.github/workflows/: main.yml  python_package.yml
docs/: index.md  modules.md
examples/: abs.py  chebpoly.py  error.py  extrema.py  roots.py  simple.py
pychebfun/: __init__.py  chebfun.py  plotting.py  polyfun.py
pychebfun/analysis/: __init__.py  error.py  plotting.py
pychebfun/core/: __init__.py  chebfun.py
pychebfun/utilities/: fct.py  runtests.py
src/pychebfun/: __init__.py  chebfun.py  chebfun_init.py  plotting.py  polyfun.py
tests/: __init__.py  data.py  test_chebfun.py  test_chebfuninit.py  test_domain.py  test_examples.py  test_functional.py  test_plot.py  tools.py
